<?xml version="1.0"?>
<package format="2">
  <name>autoware_description</name>
  <version>0.0.0</version>
  <description>The autoware_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="chelizi@todo.todo">chelizi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>effort_controllers</build_depend>

  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>position_controllers</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>velocity_controllers</build_export_depend>
  <build_export_depend>effort_controllers</build_export_depend>
  
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
